[gd_scene load_steps=2 format=3 uid="uid://dib8fnv00nw3f"]

[ext_resource type="Script" path="res://Scene/UM/UIScene/SelectArchive/select_archive.gd" id="1_0vwx3"]

[node name="SelectArchive" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0vwx3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ArchiveList" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NewArchive" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "新建存档"

[node name="Back" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "返回"

[connection signal="pressed" from="PanelContainer/VBoxContainer/NewArchive" to="." method="_on_new_archive_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
